--- a/project_dotNet5780_1766_0406/PLWPF/MainWindow.xaml
+++ b/project_dotNet5780_1766_0406/PLWPF/MainWindow.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
+        <TextBlock x:Name="loadingBanks" Text="Banks Are not yet Loaded! please wait"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" Height="35" TextAlignment="Center"/>
         <Button x:Name="hostAreaButton" Content="Host Area" FontFamily="Agency FB" FontSize="36"
                 VerticalAlignment="Center" Width="216" Background ="{StaticResource ButtonsBrush}"
                 HorizontalAlignment="Center" Click="AddHostButton_Click" MouseEnter="HostAreaButton_MouseEnter"/>
